@@ -88,7 +88,8 @@ public enum Preferences {
 	SEARCH_RESULTS_COLUMNS, 
 	SELECTED_CONTEXT_TAB, 
 	SET_TITLES_WHEN_IMPORTING, 
-	SET_TRACK_NUMBERS_WHEN_IMPORTING, 
+	SET_TRACK_NUMBERS_WHEN_IMPORTING,
+	SHOW_ADVANCED_PLAYER_CONTROLS,
 	SHOW_ALL_RADIO_STATIONS,
 	SHOW_AUDIO_OBJECT_PROPERTIES, 
 	SHOW_CONTEXT_ALBUMS_IN_GRID, 
@@ -121,5 +122,5 @@ public enum Preferences {
 	USE_SHORT_PATH_NAMES, 
 	USE_SMART_TAG_VIEW_SORTING, 
 	VIEW_MODE, 
-	VOLUME; 
+	VOLUME;
 }
